--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,14 +2,14 @@
  <nav data-role="navbar" data-grid-"d">
   <ul>
      <li><a href="https://ucsb-cs24.github.io">UCSB CS24</a></li>
-     <li><a href="https://ucsb-cs24-sp17.github.io">CS24 S17</a></li>
+     <li><a href="https://ucsb-cs24-w18.github.io">CS24 W18</a></li>
      <li><a href="https://submit.cs.ucsb.edu">submit.cs</a></li>
   </ul>
  </nav>
  <nav data-role="navbar" data-grid-"d">
   <ul>
    <li><a href="https://gauchospace.ucsb.edu">Gauchospace</a></li>
-   <li><a href="https://piazza.com/configure-classes/spring2017/cs24">Piazza</a></li>
+   <li><a href="https://piazza.com/configure-classes/winter2018/cs24">Piazza</a></li>
   </ul>
  </nav>
  {% if page.layout == "hwk" %}
