--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
  <nav data-role="navbar" data-grid-"d">
   <ul>
      <li><a href="https://ucsb-cs24.github.io">UCSB CS24</a></li>
-     <li><a href="https://ucsb-cs24-w18.github.io">CS24 W18</a></li>
+     <li><a href="https://ucsb-cs24-w18.github.io">UCSB CS24 W18</a></li>
      <li><a href="https://submit.cs.ucsb.edu">submit.cs</a></li>
   </ul>
  </nav>
